# Video-Mergin-FFMPEG

./: .gitignore  README.md  main.py  model.py  pyproject.toml  streams_example.json
mergin/: consumer.py  merge.py  merger.py  mergin.py  model.py  producer.py
