[tool.poetry]
name = "Video-Mergin-FFMPEG"
version = "0.2.0"
description = ""
authors = ["https://github.com/oalsaab"]
packages = [{ include = "mergin" }]

[tool.poetry.dependencies]
python = "^3.11"
msgspec = "^0.18.5"
click = "^8.1.7"

[tool.poetry.scripts]
merge = "mergin.merge:mergin"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
